--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@tarojs/react": "3.1.4",
     "@tarojs/runtime": "3.1.4",
     "@tarojs/taro": "3.1.4",
+    "dayjs": "^1.10.4",
     "echarts-taro3-react": "^1.0.11",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
